added new files

--- a/app/styles/sass/blocks/home-header.scss
+++ b/app/styles/sass/blocks/home-header.scss
@@ -1,282 +1,430 @@
-body, html {
-  height: 100%;
+body,
+html {
+	height: 100%;
 }
 
 .home-header {
-  background-color: $deep;
-  height: 100%;
-  color: #fff;
-  padding-top: $size;
-  &__content {
-    height: 100%;
-  }
+	background-color: $deep;
+	height: 100%;
+	color: #fff;
+	padding-top: $size;
+	&__content {
+		height: 100%;
+	}
 }
 
 .top-line {
-  position: absolute;
-  width: 100%;
-  height: $size;
-  top: 0;
-  left: 0;
-  border-bottom: 1px solid rgba($color: #fff, $alpha: $border-opacity);
-  z-index: 10;
-  background-color: $deep;
-  display: flex;
-  align-items: center;
-  &__decoration {
-    flex: 1 0 0;
-    text-align: center;
-    &::before {
-      content: '';
-      height: 1px;
-      width: 50px;
-      background-color: #fff;
-      display: inline-block;
-      opacity: $border-opacity*2;
-      position: relative;
-      top: -5px;
-    }
-  }
-  &__contacts {
-    text-transform: uppercase;
-    font-size: 10px;
-    font-weight: 500;
-    letter-spacing: 0.4em;
-    color: rgba($color: #fff, $alpha: .5);
-    display: flex;
-    align-items: center;
-  }
-  &__separator {
-    height: 30px;
-    width: 1px;
-    background-color: rgba($color: #fff, $alpha: $border-opacity*2);
-    margin: 0 20px;
-  }
-  &__numbers,
-  &__text {
-    font-family: roboto-vh, sans-serif;
-    margin-left: 7px;
-    a {
-      color: $accent;
-    }
-  }
-  &__numbers {
-    color: $accent;
-  }
-  &__text {
-    color: rgba($color: #fff, $alpha: .75);
-  }
+	position: absolute;
+	width: 100%;
+	height: $size;
+	top: 0;
+	left: 0;
+	border-bottom: 1px solid rgba($color: #fff, $alpha: $border-opacity);
+	z-index: 10;
+	background-color: $deep;
+	display: flex;
+	align-items: center;
+	&__decoration {
+		flex: 1 0 0;
+		text-align: center;
+		&::before {
+			content: "";
+			height: 1px;
+			width: 50px;
+			background-color: #fff;
+			display: inline-block;
+			opacity: $border-opacity * 2;
+			position: relative;
+			top: -5px;
+		}
+	}
+	&__contacts {
+		text-transform: uppercase;
+		font-size: 10px;
+		font-weight: 500;
+		letter-spacing: 0.4em;
+		color: rgba($color: #fff, $alpha: 0.5);
+		display: flex;
+		align-items: center;
+	}
+	&__separator {
+		height: 30px;
+		width: 1px;
+		background-color: rgba($color: #fff, $alpha: $border-opacity * 2);
+		margin: 0 20px;
+	}
+	&__numbers,
+	&__text {
+		font-family: roboto-vh, sans-serif;
+		margin-left: 7px;
+		a {
+			color: $accent;
+		}
+	}
+	&__numbers {
+		color: $accent;
+	}
+	&__text {
+		color: rgba($color: #fff, $alpha: 0.75);
+	}
 }
 
 .logo {
-  flex: 0 0 200px;
-  display: flex;
-  align-items: center;
-  color: #fff;
-  text-transform: uppercase;
-  font-size: 13px;
-  font-weight: 500;
-  letter-spacing: 0.5em;
-  text-decoration: none;
-  &:hover, &:focus {
-    color: #fff;
-    text-decoration: none;
-  }
-  &__img-wrapper {
-    width: $size;
-    height: $size;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+	flex: 0 0 200px;
+	display: flex;
+	align-items: center;
+	color: #fff;
+	text-transform: uppercase;
+	font-size: 13px;
+	font-weight: 500;
+	letter-spacing: 0.5em;
+	text-decoration: none;
+	&:hover,
+	&:focus {
+		color: #fff;
+		text-decoration: none;
+	}
+	&__img-wrapper {
+		width: $size;
+		height: $size;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
 }
 
 .menu-button-container {
-  flex: 0 0 200px;
-  text-align: right;
-  position: relative;
-  height: $size;
+	flex: 0 0 200px;
+	text-align: right;
+	position: relative;
+	height: $size;
 }
 
 .menu-button {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: $size;
-  height: $size;
-  background-color: #3c3c3c;
-  background-image: url(../images/dist/bars-solid.svg);
-  background-repeat: no-repeat;
-  background-position: center center;
-  transition: background-color .25s ease-out;
-  &:hover {
-    background-color: $accent;
-  }
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: $size;
+	height: $size;
+	background-color: #3c3c3c;
+	background-image: url(../images/dist/bars-solid.svg);
+	background-repeat: no-repeat;
+	background-position: center center;
+	transition: background-color 0.25s ease-out;
+	&:hover {
+		background-color: $accent;
+	}
 }
 
 // ASIDE
 
 .home-aside {
-  background-color: $dark;
-  width: $size;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  padding-top: $size;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  z-index: 5;
-  &__decoration {
-    flex: 1 0 0;
-    background-image: url(../images/dist/decoration.svg);
-    width: 100%;
-    background-repeat: no-repeat;
-    background-position: center center;
-  }
-  &__social {
-    flex: 1 0 0;
-  }
-  &__share-icon {
-    background-color: $accent;
-    width: $size;
-    flex: 0 0 $size;
-    background-image: url(../images/dist/share-solid.svg);
-    background-size: 12px;
-    background-repeat: no-repeat;
-    background-position: center center;
-  }
+	background-color: $dark;
+	width: $size;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	padding-top: $size;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	z-index: 5;
+	&__decoration {
+		flex: 1 0 0;
+		background-image: url(../images/dist/decoration.svg);
+		width: 100%;
+		background-repeat: no-repeat;
+		background-position: center center;
+	}
+	&__social {
+		flex: 1 0 0;
+	}
+	&__share-icon {
+		background-color: $accent;
+		width: $size;
+		flex: 0 0 $size;
+		background-image: url(../images/dist/share-solid.svg);
+		background-size: 12px;
+		background-repeat: no-repeat;
+		background-position: center center;
+	}
 }
 
 .social-item {
-  width: 40px;
-  height: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid rgba($color: #fff, $alpha: $border-opacity);
-  border-bottom: 1px solid transparent;
-  margin-top: -1px;
-  transition: background-color .5s ease-out;
-  &:last-child {
-    border-bottom: 1px solid rgba($color: #fff, $alpha: $border-opacity);
-  }
-  img {
-    width: 15px;
-    height: auto;
-    max-height: 15px;
-    opacity: .3;
-    transition: opacity .5s ease-out;
-  }
-  &:hover {
-    background-color: $accent;
-    img {
-      opacity: 1;
-    }
-  }
+	width: 40px;
+	height: 40px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border: 1px solid rgba($color: #fff, $alpha: $border-opacity);
+	border-bottom: 1px solid transparent;
+	margin-top: -1px;
+	transition: background-color 0.5s ease-out;
+	&:last-child {
+		border-bottom: 1px solid rgba($color: #fff, $alpha: $border-opacity);
+	}
+	img {
+		width: 15px;
+		height: auto;
+		max-height: 15px;
+		opacity: 0.3;
+		transition: opacity 0.5s ease-out;
+	}
+	&:hover {
+		background-color: $accent;
+		img {
+			opacity: 1;
+		}
+	}
 }
 
 //SLIDER
 
 .slider-container {
-  padding-left: $size;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  position: relative;
+	padding-left: $size;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	position: relative;
 }
 
 .slider-bottom {
-  position: absolute;
-  bottom: 0;
-  left: $size;
-  height: $size;
-  display: flex;
-  align-items: center;
-  background-color: #666;
-  z-index: 5;
-  width: calc(75% - #{$size});
+	position: absolute;
+	bottom: 0;
+	left: $size;
+	height: $size;
+	display: flex;
+	align-items: center;
+	z-index: 5;
+	width: calc(75% - #{$size});
 }
 
 .slider-share {
-  flex: 0 1 auto;
-  &__items {
-    display: flex;
-    position: relative;
-    bottom: -.5px;
-  }
-  &__item {
-    width: $size;
-    height: $size;
-    border: none;
-    background-color: $dark;
-    border-right: 1px solid rgba($color: #fff, $alpha: $border-opacity);
-    margin-left: -.5px;
-    &:last-child {
-      border: none;
-    }
-    &::after {
-      content: '';
-      position: absolute;
-      width: 3px;
-      top: 0;
-      right: 0;
-      height: 100%;
-      background-color: $accent;
-    }
-  }
-}
-
-.slider-pagination {
-  flex: 0 0 140px;
-}
-  
-.slider-scrollbar {
-  flex: 1 0 0;
-}
-  
-.slider-navigation {
-  flex: 0 0 140px;
+	flex: 0 1 auto;
+	&__items {
+		display: flex;
+		position: relative;
+		bottom: -0.5px;
+	}
+	&__item {
+		width: $size;
+		height: $size;
+		border: none;
+		background-color: $dark;
+		border-right: 1px solid rgba($color: #fff, $alpha: $border-opacity);
+		margin-left: -0.5px;
+		&:last-child {
+			border: none;
+		}
+		&::after {
+			content: "";
+			position: absolute;
+			width: 3px;
+			top: 0;
+			right: 0;
+			height: 100%;
+			background-color: $accent;
+		}
+	}
 }
 
 .slider-img {
-  height: 100%;
-  width: 75%;
-  overflow: hidden;
-  position: relative;
-  &::before {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background-color: rgba($color: #000000, $alpha: .45);
-    z-index: 2;
-  }
+	height: 100%;
+	width: 75%;
+	overflow: hidden;
+	position: relative;
+	&::before {
+		content: "";
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+		background-color: rgba($color: #000000, $alpha: 0.45);
+		z-index: 2;
+	}
 }
 
 .slider-img__slide {
-  height: 100%;
-  overflow: hidden;
+	height: 100%;
+	overflow: hidden;
 }
 
 .slider-img__bg {
-  height: 100%;
-  background-position: center center;
-  background-size: cover;
+	height: 100%;
+	background-position: center center;
+	background-size: cover;
 }
 
 .slider-text {
-  position: absolute;
-  z-index: 3;
-  width: 100%;
-  height: 100%;
+	position: absolute;
+	z-index: 3;
+	width: 100%;
+	height: calc(100% - #{$size});
 }
 
 .slider-text__slide {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+}
+
+.slider-text__content {
+	text-align: right;
+	padding-right: 22%;
+}
+
+.slider-text__heading {
+	text-transform: uppercase;
+	font-weight: 800;
+	font-size: 60px;
+	line-height: 120%;
+	font-family: oswald-vh, sans-serif;
+	max-width: 780px;
+	float: right;
+	span {
+		color: $accent;
+		white-space: nowrap;
+	}
+}
+
+.slider-text__description {
+	float: right;
+	clear: both;
+	max-width: 500px;
+	font-weight: 500;
+	font-size: 13px;
+	line-height: 170%;
+	margin-top: 15px;
+	margin-bottom: 20px;
+}
+
+.slider-text__button {
+	float: right;
+	clear: both;
+}
+
+.slider-pagination {
+	flex: 0 0 140px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: $size;
+	.swiper-pagination-bullet {
+		width: 6px;
+		height: 6px;
+		opacity: 1;
+		border-radius: 50%;
+		background-color: #fff;
+		margin: 0 7.5px;
+		&-active {
+			background-color: $accent;
+			position: relative;
+			&::before {
+				content: "";
+				position: absolute;
+				width: 14px;
+				height: 14px;
+				border: 1px solid $accent;
+				border-radius: 50%;
+				top: -4px;
+				left: -4px;
+			}
+		}
+	}
+}
+
+.slider-scrollbar {
+	flex: 1 0 0;
+	.swiper-scrollbar {
+		height: 1px;
+		background-color: rgba($color: #fff, $alpha: 0.2);
+		&-drag {
+			height: 3px;
+			background-color: $accent;
+			top: -1px;
+		}
+	}
+}
+
+.slider-navigation__container {
+	max-width: 70px;
+	position: relative;
+	margin: auto;
+}
+
+.slider-navigation {
+	flex: 0 0 140px;
+	position: relative;
+	left: 10px;
+	.swiper-button-prev,
+	.swiper-button-next {
+		width: 32px;
+		height: 32px;
+		color: $accent;
+		background-color: #3c3c3c;
+		border: 2px solid $accent;
+		border-radius: 50%;
+		top: 5px;
+		&::after {
+			font-size: 10px;
+		}
+	}
+	.swiper-button-disabled {
+		opacity: 1;
+		color: #8a8a8a;
+		border-color: #8a8a8a;
+	}
+	.swiper-button-prev {
+		left: 0;
+	}
+	.swiper-button-next {
+		right: 0;
+	}
+}
+
+.slider-gear {
+	width: 470px;
+	height: 470px;
+	margin-top: -270px;
+	position: absolute;
+	background-image: url(../images/dist/gear.svg);
+	background-size: cover;
+	background-position: center center;
+	z-index: 2;
+	top: 50%;
+	right: calc(24% - 235px);
+}
+
+.slider-pagination-count {
+	position: absolute;
+	right: 25px;
+	top: 30px;
+	z-index: 100;
+	width: 120px;
+	height: 80px;
+	font-family: oswald-vh, sans-serif;
+	font-weight: 500;
+	font-size: 24px;
+	.current {
+		font-size: 40px;
+		color: $accent;
+		display: inline-block;
+		min-width: 42px;
+	}
+}
+
+.slider-pagination-current {
+	right: 40px;
+	bottom: 10px;
+	position: absolute;
+	font-size: 100px;
+	font-family: oswald-vh, sans-serif;
+	color: $deep;
+	-webkit-text-stroke: 1px #7f7f7f;
+	&__dot {
+		color: $accent;
+		-webkit-text-stroke: transparent;
+	}
 }
