--- a/app/styles/sass/_config.sass
+++ b/app/styles/sass/_config.sass
@@ -8,7 +8,8 @@ $deep: #252525
 $lineheight: 1.7 // Document Line Height
 $userfont: raleway-vh, sans-serif // User Font Family
 $systemfont: -apple-system, BlinkMacSystemFont, Arial, sans-serif // System Font Family
-$size: 70px
+$size: 75px
+$size-sm: 58px
 $border-opacity: .1
 
 // Bootstrap compatible gutter variable => $gutter
@@ -23,6 +24,7 @@ $gutter: $grid-gutter-width
 // @import 'node_modules/bootstrap/scss/utilities/_sizing.scss' // Optional Bootstrap Utilites
 
 @import 'node_modules/swiper/swiper-bundle'
+@import 'app/vendor/micromodal/micromodal'
 
 // FONTS LOAD SECTION
 
